# Hypermania

./: .gitignore  Hypermania.slnx
.github/workflows/: unity-cicd.yml
HyperMania/Assets/: UniversalRenderPipelineGlobalSettings.asset
HyperMania/ProjectSettings/: ProjectSettings.asset  TimeManager.asset
Hypermania/: .editorconfig  .gitignore
Hypermania.Analyzers/: NoFloatDoubleInGameSimAnalyzer.cs
Hypermania.CPU/: Hypermania.CPU.csproj  Program.cs
Hypermania.CPU/Featurization/: Featurizer.cs
Hypermania.CPU/Hosting/: DefaultSimOptions.cs  TrainingEnv.cs
Hypermania.CPU/Policy/: IPolicy.cs  NeuralPolicy.cs  RandomPolicy.cs  WarmupPolicy.cs
Hypermania.CPU/Shims/: UnityShims.cs
Hypermania.CPU/Training/: ActionSpace.cs  BatchedSelfPlayEnv.cs  PolicyNet.cs  PpoTrainer.cs  RewardShaper.cs  SelfPlayEnv.cs  TrainingReporter.cs  Trajectory.cs  (+1 more)
Hypermania.Game/: CharacterState.cs  CharacterStateExtensions.cs  ComboGenerator.cs  FighterState.cs  GameState.cs  HitOutcome.cs  Hypermania.Game.asmdef  Hypermania.Game.csproj  Input.cs  InputHistory.cs  ManiaState.cs  Physics.cs  Pool.cs  ProjectileState.cs  RhythmCombo.cs  SimConstants.cs  package.json
Hypermania.Scripts/: README.md  generate_metrics.py
Hypermania.Shared/: Character.cs  Deque.cs  Directory.Build.props  Frame.cs  Hypermania.Shared.asmdef  Hypermania.Shared.csproj  Instant.cs  Rollback.cs  Serialization.cs  Stage.cs  VictoryKind.cs  package.json
Hypermania.Utils/: Stage_1_Beats.mid  midi_to_frames.py
Server/synapse/: Cargo.toml
Server/synapse/src/: error.rs  main.rs  punch.rs  relay.rs
(+587 files in other folders)
