[package]
name = "synapse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = {version = "0.8.8", features = ["ws"]}
bytes = "1.11.0"
serde = {version = "1.0.228", features = ["derive"]}
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3.31"

